@@ -3,9 +3,7 @@ package com.example.kyrsach.ThreadCont;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 
-import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.InputStreamReader;
+import java.io.*;
 import java.util.concurrent.Semaphore;
 
 public class taskFour extends Thread {
@@ -13,9 +11,8 @@ public class taskFour extends Thread {
     String PID;
     Semaphore sem;
     ObservableList<String> list = FXCollections.observableArrayList();
-    public taskFour(Semaphore sem,String PID){
-        this.PID = PID;
-        this.sem = sem;
+    ProcessBuilder proc = new ProcessBuilder();
+    public taskFour(){
     }
     public void getPID(){
 
@@ -23,20 +20,35 @@ public class taskFour extends Thread {
 
     public void getStime(){
         try {
-            String process;
-            Process p =  Runtime.getRuntime().exec("ps -ef -o stime -c "+PID);
-            BufferedReader input = new BufferedReader(new InputStreamReader(p.getInputStream()));
-            process = input.readLine();
-            while ((process = input.readLine()) != null) {
-                byte[] arr = process.getBytes("UTF-8");
-                process = new String (arr, "utf8");
-                list.add(process);// Выписывает результат по строчно
-                System.out.println(process);
+
+            ProcessBuilder pb = new ProcessBuilder("ps","-ef");
+            Process process = pb.start();
+            String s;
+
+            BufferedReader stdInput = new BufferedReader(new InputStreamReader(process.getInputStream()));
+
+            while ((s = stdInput.readLine()) != null) {
+
+                System.out.println(s);
+                String str = new String(s.getBytes("Cp1251"),"Cp866");  //преобразование строки
+                System.out.println(str);
+                stdInput.close();
+
             }
-            input.close();
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
+    }
+    public static String asString(InputStream is, String charsetName ) throws IOException {
+        ByteArrayOutputStream temp = new ByteArrayOutputStream();
+
+        byte[] buffer = new byte[1024];
+        int bytesRead;
+        while ( (bytesRead = is.read( buffer )) > 0 ) {
+            temp.write( buffer, 0, bytesRead );
+        }
+
+        return temp.toString( charsetName );
     }
     public void getSizeWinApp(){
         try {
